1. Improve Adwaita (Linux) scrollbars.
2. Show shutdown and restart actions in server settings toolbar if called from
   information dialog.
3. Move player 'Extra settings' into menu in player settings dialog toolbar.
4. Move player 'Set sleep time for all players' and 'Create group' into menu in
   manage players dialog toolbar.
5. Only show DSTM dialog on longpress if DSTM is currently active.

1.6.0
-----
 1. Don't colour toolbars of fullscreen dialogs for dark and light themes, only
    colour if using coloured toolbars.
 2. Use separate checkbox for coloured toolbars option.
 3. Place colored css mods into separate file, no need for theme-colored.css
 4. Add 'Darker' theme variant.
 5. Add support for OS-specific and user themes (see 'Detailed Information' on
    Material's github wiki for more details).
 6. Add OS-like themes for Linux, macOS, and Windows.
 7. Set default theme based upon platform. 'Darker' for Android, 'Light' for
    iOS, 'Adwaita Dark' for Linux, 'Mojave Dark' for macOS, and
    'Windows 10 Dark' for Windows.
 8. Better play/add hover buttons for light theme.
 9. Remove bottom nav resizing for android gesture navigation.
10. Update native colours when either top or bottom changes.
11. Use non-svg icon for application settings, so that it is correctly
    recoloured.
12. In desktop layout, fix menu shown when clicking cover if currently showing
    song info.
13. Add option to show current date & time when showing now-playing screen.
14. Always add 'E' to 'tags' when asking for artist's albums, required for
    emblems.
15. Better(?) portrait text position calculation.
16. Alter appearance of scan progress shown in server settings, so that progress
    can be seen with dark and light themes.
17. Add support for user colours (see 'Detailed Information' on Material's
    github wiki for more details).
18. Don't open 'Text files from music folder' in an embedded iframe for iOS, as
    PDF viewer does not scroll.